# musicbinder

./: .gitignore  README.md  pyproject.toml  requirements.txt  tailwind.config.js
.devcontainer/: Dockerfile  devcontainer.json
app/: config.py  crud.py  helpers.py  main.py  routes.py
app/static/css/: main.css
app/static/favicon/: about.txt
app/static/src/: tw.css
app/templates/: about.html  catalog.html  main.html  search.html
app/templates/artist/: details.html  profile.html
app/templates/shared/: _base.html  _footer.html  _header.html
data/: data.json
tests/: conftest.py  test_main.py
